src/test/deca/syntax/valid/op_arith.deca
{
int x,y,a,b,c,d,e;
x=5;
y=4;

a=x*y;
b=x/y;
c=x%y;
d=x+y;
e=x-y;

}