src/test/deca/syntax/invalid/missingComa.deca
//Oublie d'une virgule dans print

{
    int a = 4, b = 5;
    print(a b);
}